--- a/src/kanban.module.scss
+++ b/src/kanban.module.scss
@@ -2,26 +2,19 @@
   display: flex;
   align-items: flex-start;
 
-  &__section {
+  .section {
       width: 400px;
       background-color: #383838;
       padding: 10px;
       border-radius: 10px;
-
-      & ~ & {
-          margin-left: 10px;
-      }
-
+      margin-left: 10px;
+      
       &__title {
-          font-size: 1.2rem;
+          font-size: 1.4rem;
           font-weight: 700;
           margin: 10px 0 20px;
       }
 
-      &__content {
-          & > * ~ * {
-              margin-top: 10px;
-          }
-      }
+      
   } 
 }
