--- a/src/kanban.module.scss
+++ b/src/kanban.module.scss
@@ -34,5 +34,11 @@
             
           }
       }
+      input{
+          width:170px;
+          height:30px;
+          margin-bottom:2px;
+          font-size:1.2rem;
+      }
   } 
 }
